# Proloquium

./: .editorconfig  .env.secret  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .proloquiumignore  .pylintrc  Alice (Project Manager)_history.json  Alice_history.json  Makefile  None_history.json  README.md  RESOURCES.md  TASK_LIST.md  directory_files_list.json  directory_files_structure.json  directory_list.json  directory_structure.json  docker-compose.local.yml  docker-compose.yml  mypy.ini  output.csv  poetry.toml  pyproject.toml  tree
.chainlit/: .langchain.db
chats/raw/: # Epic Title: Autonomous Software Develo.md  Python SDK with Action Chains - A ShareGPT conversation.html  feature 1 and 2 v y1.md  feature 1 v x1.md  full chat.md  v1.md
chats/raw/Python SDK with Action Chains - A ShareGPT conversation_files/: 170-35f5cd9f976200e8.js  514-07912d02925ca8d1.js  5c036271d96b51a0.css  760-0c1c1ab42fa66c8b.js  [id]-5fc8639d9742da05.js  _app-d182c39403a5071e.js  _buildManifest.js  _ssgManifest.js  d82376d16f5e9222.css  index-d42250190867d61c.js  main-724fb8249f455311.js  script.js
logs/20230415205014/: csv_processor.py  csv_processor.py.prompt
logs/20230415205202/: csv_processor.py  csv_processor.py.prompt  test_csv_processor.py.prompt
logs/20230415205325/: csv_processor.py  test_csv_processor.py  test_csv_processor.py.prompt
logs/20230415210541/: csv_processor.py  csv_processor.py.prompt  test_csv_processor.py.prompt
logs/20230415210651/: csv_processor.py  test_csv_processor.py  test_csv_processor.py.prompt
logs/20230415210946/: csv_processor.py  csv_processor.py.prompt  test_csv_processor.py  test_csv_processor.py.prompt
logs/20230415211127/: csv_processor.py  csv_processor.py.prompt  test_csv_processor.py
logs/20230415211350/: csv_processor.py  csv_processor.py.prompt  test_csv_processor.py  test_csv_processor.py.prompt
logs/20230415211639/: csv_processor.py  csv_processor.py.prompt  test_csv_processor.py.prompt
logs/20230415211911/: csv_processor.py  csv_processor.py.prompt  result_test_csv_processor.py.txt  test_csv_processor.py  test_csv_processor.py.prompt
logs/20230415212329/: csv_processor.py.prompt  result_test_csv_processor.py.txt  test_csv_processor.py  test_csv_processor.py.prompt
logs/20230415212733/: math_functions.py  math_functions.py.prompt  result_test_math_functions.py.txt  test_math_functions.py
logs/20230415212907/: math_functions.py.prompt  result_test_math_operations.py.txt  test_math_operations.py  test_math_operations.py.prompt
logs/20230415213356/: math_operations.py  math_operations.py.prompt  result_test_math_operations.py.txt  test_math_operations.py
project/: csv_processor.py  math_functions.py  random.py  test_math_functions.py  test_math_operations.py
python/: .env.example  .flake8  .pylintrc  Dockerfile  Pipfile  pyproject.toml  pyrightconfig.json  pytest.ini
python/data/prompt/: prompt_builder.prompt  prompt_builder.txt
python/data/prompt/lead_engineer/: accept_requirements.prompt
python/data/prompt/product_owner/: discovery_call.prompt  discovery_call.txt  share_requirements.prompt
python/src/: lsp.py  main.py  main_old.py
python/src/common/: config.py
python/src/ignore/: main_backup.py
python/src/models/: prompts.py  roles.py
python/src/prompts/: code_generator.txt  unit_test_generator.txt
python/src/utils/: Lsp_outline_extractor.py  code_executor.py  extract_code.py  file_reader.py  openai_utils.py  parse_pytest_output.py  pinecone_utils.py  pydantic_builder.py  pytest_exector.py  task_management.py  test_parse_pytest_output.py
runs/20230415205014/: test_csv_processor.py  test_csv_processor.py.prompt
runs/20230415205202/: test_csv_processor.py
runs/20230415205325/: csv_processor.py.prompt
runs/20230415210541/: test_csv_processor.py
runs/20230415210651/: csv_processor.py.prompt
runs/20230415211127/: test_csv_processor.py.prompt
runs/20230415211639/: test_csv_processor.py
scripts/: build.sh  run.sh
src/: app.py  autogpt.py  bob.py  chat.py  client.py  logs.py  main.py  server.py  singleton.py
src/config/: __init__.py  config.py
src/cookiecutter/: cookiecutter.py  templates.py
src/docker/: Dockerfile  docker-compose.yml
src/executor/: execute_code.py
src/extractor/: code_extractor.py
src/generator/: file_writer.py  proloquium__project_dir.py  templates.py
src/prompts/: code.md
src/tree_reader/: gitignore_reader.py  tree_reader.py
src/utilities/: chat_model.py  file_loader.py  random_project_name.py
src/workspace/: __init__.py  workspace.py
templates/: README.md
templates/poetry/: LICENSE  Makefile  cookiecutter.json
templates/poetry/hooks/: pre_gen_project.py
templates/poetry/{{cookiecutter.project_slug}}/: Makefile  pyrightconfig.json
templates/poetry/{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: app.py
tests/: conftest.py
tests/integration/: test_execute_code.py
tests/unit/: test_main.py
tests/unit/extractor/: test_code_extractor.py
tests/unit/generator/: test_file_writer.py  test_templates.py
tests/unit/tree_reader/: test_gitignore_reader.py
tests/unit/utils/: test_chat_model.py  test_file_loader.py
