[tool.poetry]
name = "src"
version = "0.1.0"
description = "A Python project generator that creates simple to moderately complex Python applications with CLI and GUI interfaces, along with unit tests and documentation."
authors = ["Stephen Rayner <stephen.r.rayner@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cli = "src.main:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
py = "^1.11.0"
langchain = "^0.0.146"
openai = "^0.27.4"
faker = "^18.6.0"
cookiecutter = "^2.1.1"
pyright = "^1.1.305"
docker = "^6.0.1"
colorama = "^0.4.6"
ptyprocess = "^0.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
duckdb-engine = "^0.7.0"
pytest-watcher = "^0.2.6"
freezegun = "^1.2.2"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
black = "^23.1.0"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
playwright = "^1.28.0"
setuptools = "^67.6.1"

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "src/__init__.py",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
    "raise NotImplementedError",
    "return NotImplemented",
]
precision = 2

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
